--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "straw",
   "version": "1.0.0",
-  "description": "Règlement du serveur Straw",
+  "description": "Règlement de la communauté Kaori Café",
   "main": "straw.js",
-  "author": "Straw Café",
+  "author": "Kaori Café",
   "license": "ISC",
   "engines": {
     "node": ">=16.6.0"
   },
   "dependencies": {
     "discord.js": "^13.1.0",
-    "express": "^4.18.0"
   }
 }
